deployment/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pod-terminator
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
  namespace: pod-terminator
  labels:
    app: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1234
      containers:
      - name: server
        image: yangl/pod-termination-webhook:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
          name: webhook-api
        volumeMounts:
        - name: webhook-tls-certs
          mountPath: /run/secrets/tls
          readOnly: true
      volumes:
      - name: webhook-tls-certs
        secret:
          secretName: webhook-certificate
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
  namespace: pod-terminator
spec:
  selector:
    app: webhook-server
  ports:
    - port: 443
      targetPort: webhook-api
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: pod-terminator
  annotations:
    cert-manager.io/inject-ca-from: pod-terminator/webhook-certificate
webhooks:
  - name: webhook-server.pod-terminator.svc
    clientConfig:
      service:
        name: webhook-server
        namespace: pod-terminator
        path: "/validate"
    rules:
      - operations: [ "DELETE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: health-proxy
  namespace: pod-terminator
  labels:
    app: health-proxy
spec:
  selector:
    matchLabels:
      app: health-proxy
  template:
    metadata:
      labels:
        app: health-proxy
    spec:
      hostNetwork: true
      containers:
      - name: proxy
        image: yangl/healthproxy:latest
        imagePullPolicy: Always
      tolerations:
        - key: CriticalAddonsOnly
          operator: Exists
        - effect: NoExecute
          operator: Exists
        - effect: NoSchedule
          operator: Exists
